Fix the width issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,8 @@
 
 body{
     font-family: 'dosis',sans-serif;
+    position: fixed;
+    width: 100%;
 }
 
 .upper-align {
